# embedded_c_framework

./: .clang-tidy  .cmake-format.yaml  .templatesyncignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  opencode.json  pyproject.toml
sw/ecf/: CMakeLists.txt
sw/ecf/doc/: ecf.md
sw/ecf/embedded_assert_framework/: CMakeLists.txt
sw/ecf/embedded_assert_framework/inc/: eaf.h
sw/ecf/embedded_assert_framework/src/: eaf.c
sw/ecf/embedded_base_framework/: CMakeLists.txt
sw/ecf/embedded_base_framework/doc/: ebf.md
sw/ecf/embedded_base_framework/inc/: ebf.h  ebf_utils.h
sw/ecf/embedded_base_framework/src/core/: CMakeLists.txt
sw/ecf/embedded_base_framework/src/framework/: CMakeLists.txt
sw/ecf/embedded_fake_framework/: CMakeLists.txt
sw/ecf/embedded_fake_framework/doc/: eff.md
sw/ecf/embedded_fake_framework/inc/: eff.h
sw/ecf/embedded_fake_framework/test/: CMakeLists.txt
sw/ecf/embedded_middleware_framework/: CMakeLists.txt
sw/ecf/embedded_middleware_framework/inc/: emf.h
sw/ecf/embedded_middleware_framework/src/: CMakeLists.txt
sw/ecf/embedded_platform_framework/: CMakeLists.txt
sw/ecf/embedded_platform_framework/doc/: epf.md
sw/ecf/embedded_platform_framework/os/: CMakeLists.txt
sw/ecf/embedded_test_framework/doc/: etf.md
sw/ecf/embedded_test_framework/inc/: etf.h
sw/ecf/event_driven_framework/doc/: edf.md
sw/ecf/event_driven_framework/inc/: edf.h  edf_active_object.h  edf_hsm.h
sw/ecf/tools/cmake/functions/: ecf_mock.cmake  (+1 more)
sw/ecf/tools/eff_gen/: eff_gen.md  eff_gen.py
sw/ecf/tools/scripts/: eff_gen.py
(+355 files in other folders)
